RESOLVED FIXED316339
[WebGPU] shader,validation,expression,call,builtin,ldexp:* is failing
https://bugs.webkit.org/show_bug.cgi?id=316339
Summary [WebGPU] shader,validation,expression,call,builtin,ldexp:* is failing
Tadeu Zagallo
Reported 2026-06-04 13:49:37 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2026-06-04 13:49:45 PDT
Tadeu Zagallo
Comment 2 2026-06-04 13:58:24 PDT
EWS
Comment 3 2026-06-05 06:00:51 PDT
Committed 314629@main (daf28c8e1df6): <https://commits.webkit.org/314629@main> Reviewed commits have been landed. Closing PR #66485 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.