[WebGPU] shader,validation,expression,call,builtin,ldexp:* is failing https://bugs.webkit.org/show_bug.cgi?id=316339 rdar://178756618

Reviewed by Mike Wyrzykowski.

Add the missing validation function and missing overloads for ldexp.

* LayoutTests/http/tests/webgpu/webgpu/shader/validation/expression/call/builtin/ldexp-expected.txt:
* LayoutTests/platform/mac-wk2/TestExpectations:
* Source/WebGPU/WGSL/ConstantFunctions.h:
(WGSL::CONSTANT_FUNCTION):
(WGSL::VALIDATION_FUNCTION):
(WGSL::ldexpBiasForType):
* Source/WebGPU/WGSL/GlobalVariableRewriter.cpp:
(WGSL::RewriteGlobalVariables::getPacking):
* Source/WebGPU/WGSL/Overload.h:
* Source/WebGPU/WGSL/TypeCheck.cpp:
* Source/WebGPU/WGSL/TypeDeclarations.rb:

Canonical link: https://commits.webkit.org/314629@main