Source/WebGPU/WGSL/TypeDeclarations.rb
@@ -689,11 +689,14 @@ function :inverseSqrt, {
 function :ldexp, {
     must_use: true,
     const: true,
+    validate: true,
 
     [T < ConcreteFloat].(T, i32) => T,
     [].(abstract_float, abstract_int) => abstract_float,
+    [].(abstract_float, i32) => abstract_float,
     [T < ConcreteFloat, N].(vec[N][T], vec[N][i32]) => vec[N][T],
     [N].(vec[N][abstract_float], vec[N][abstract_int]) => vec[N][abstract_float],
+    [N].(vec[N][abstract_float], vec[N][i32]) => vec[N][abstract_float],
 }
 
 # 17.5.36
